# neoland

./: .gitignore  Brewfile  Brewfile.lock.json  Makefile  README.adoc  README.md  ansible.cfg  antora-playbook.yml  hosts.ini  local-antora-playbook.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
cloud-init/: ubuntu.yml  ubuntu.yml.j2
dockers/clickhouse/: compose.yaml  docker-compose.yaml
dockers/kafka/: .env  README.md  compose.yaml
dockers/litellm/: .env  compose.yml  config.yml
dockers/livebook/: compose.yml
dockers/localstack/: compose.yml
dockers/metabase/: compose.yml
dockers/nacos/: .env  compose.yml
dockers/postgres/: compose.yaml
dockers/postgres/initdb/: init-user-db.sh
dockers/rabbitmq/: README.md  compose.yaml
dockers/redis/: compose.yaml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc  startup.adoc
docs/modules/ai/: nav.adoc
docs/modules/ai/pages/: dify.adoc  (+10 more)
docs/modules/dac/: nav.adoc
docs/modules/dt/: nav.adoc
docs/modules/iac/: nav.adoc
docs/modules/iot/: nav.adoc
docs/modules/web/: nav.adoc
docs/supplemental-ui/partials/: header-content.hbs
livebooks/: build-gpt-from-scratch.livemd  fizz-buzz-neural-network.livemd  start.livemd
livebooks/elixir/: ecto.livemd  protocol.livemd  unit_testing.livemd
livebooks/ml/: neural-network-in-axon.livemd
livebooks/startup/: authentication.livemd  potion.livemd
notebooks/llm/: litellm-test.ipynb
playbooks/: site.yml
playbooks/tasks/: component.yml
test/: litellm_test.py
(+43 files in other folders)
