[tool.poetry]
name = "ainfra"
version = "0.1.0"
description = "AI Infrastructure"
authors = ["Zhenyuan Lau <zhenyuanlau@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
